--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,8 @@ body {
 
 img {
   display: block;
-  max-width: 100%;
+  max-width: 80%;
   height: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
